src/components/button-group/themes/shared/button/button.common.scss
@use 'styles/utilities' as *;
@use '../../light/themes' as *;

$theme: $material;

@mixin disabled {
    [part~='toggle'] {
        color: var-get($theme, 'disabled-text-color');
        background: var-get($theme, 'disabled-background-color');
        border-color: var-get($theme, 'item-disabled-border');
    }

    ::slotted(igc-icon) {
        color: var-get($theme, 'disabled-text-color');
    }
}

:host {
    [part~='toggle'] {
        $icon-size: rem(18px);

        --ig-icon-size: #{$icon-size};
        --igx-icon-size: #{$icon-size};

        min-height: $material-flat-btn-size;
        min-width: var(--button-min-width);
        color: var-get($theme, 'item-text-color');
        background: var-get($theme, 'item-background');
        padding-inline: pad-inline(rem(8px), rem(12px), rem(16px));
        padding-block: pad-block(rem(1px), rem(4px), rem(6px));
        border-color: var-get($theme, 'item-border-color');
    }

    ::slotted(igc-icon) {
        color: var-get($theme, 'item-icon-color');
    }
}

:host(:hover) {
    [part~='toggle'] {
        z-index: 1;
        color: var-get($theme, 'item-hover-text-color');
        background: var-get($theme, 'item-hover-background');
        border-color: var-get($theme, 'item-hover-border-color');
    }

    ::slotted(igc-icon) {
        color: var-get($theme, 'item-hover-icon-color');
    }
}

:host([part='toggle focused']),
:host(:focus-within) {
    [part~='toggle'] {
        z-index: 1;
        color: var-get($theme, 'item-focused-text-color');
        background: var-get($theme, 'item-focused-background');
        border-color: var-get($theme, 'item-focused-border-color');

        &:hover {
            background: var-get($theme, 'item-focused-hover-background');
            border-color: var-get($theme, 'item-focused-hover-border-color');
            color: var-get($theme, 'item-focused-hover-text-color');
        }

        &:active {
            background: var-get($theme, 'item-active-background');
            border-color: var-get($theme, 'item-active-border-color');
            color: var-get($theme, 'item-hover-text-color');

            ::slotted(igc-icon) {
                color: var-get($theme, 'item-hover-icon-color');
            }
        }
    }

    ::slotted(igc-icon) {
        color: var-get($theme, 'item-focused-text-color');
    }
}

:host([part='toggle focused']:hover),
:host(:focus-within:hover) {
    ::slotted(igc-icon) {
        color: var-get($theme, 'item-focused-hover-text-color');
    }
}

:host(:active),
[part~='toggle']:active {
    [part~='toggle'] {
        z-index: 2;
        background: var-get($theme, 'item-active-background');
        border-color: var-get($theme, 'item-active-border-color');
        color: var-get($theme, 'item-hover-text-color');

        ::slotted(igc-icon) {
            color: var-get($theme, 'item-hover-icon-color');
        }
    }
}

:host([selected]) {
    [part~='toggle'] {
        z-index: 3;
        color: var-get($theme, 'item-selected-text-color');
        background: var-get($theme, 'item-selected-background');
        border-color: var-get($theme, 'item-selected-border-color');
    }

    ::slotted(igc-icon) {
        color: var-get($theme, 'item-selected-icon-color');
    }
}

:host([selected]:hover) {
    [part~='toggle'] {
        color: var-get($theme, 'item-selected-hover-text-color');
        background: var-get($theme, 'item-selected-hover-background');
        border-color: var-get($theme, 'item-selected-hover-border-color');
    }

    ::slotted(igc-icon) {
        color: var-get($theme, 'item-selected-hover-icon-color');
    }
}

:host([selected][part='toggle focused']),
:host([selected]:focus-within) {
    [part~='toggle'] {
        color: var-get($theme, 'item-selected-text-color');
        background: var-get($theme, 'item-selected-focus-background');
        border-color: var-get($theme, 'item-selected-border-color');

        &:hover {
            background: var-get($theme, 'item-selected-focus-hover-background');
            color: var-get($theme, 'item-selected-hover-text-color');
            border-color: var-get($theme, 'item-selected-border-color');
        }

        &:active {
            background: var-get($theme, 'item-selected-active-background');
            border-color: var-get($theme, 'item-selected-active-border-color');
        }
    }

    ::slotted(igc-icon) {
        color: var-get($theme, 'item-selected-icon-color');
    }
}

:host([selected][part='toggle focused']:hover),
:host([selected]:focus-within:hover) {
    ::slotted(igc-icon) {
        color: var-get($theme, 'item-selected-hover-icon-color');
    }
}

:host([selected]:active),
:host([selected]) [part~='toggle']:active {
    [part~='toggle'] {
        background: var-get($theme, 'item-selected-active-background');
        border-color: var-get($theme, 'item-selected-active-border-color');
    }
}

:host([disabled]),
:host(:disabled) {
    @include disabled();
}

:host-context([disabled]),
:host-context(:disabled) {
    @include disabled();
}

:host([selected]:disabled),
:host([selected][disabled]) {
    [part~='toggle'] {
        color: var-get($theme, 'disabled-selected-text-color');
        background: var-get($theme, 'disabled-selected-background');
        border-color: var-get($theme, 'disabled-selected-border-color');
    }

    ::slotted(igc-icon) {
        color: var-get($theme, 'disabled-selected-icon-color');
    }
}

